[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "learnedbf"
authors = [
  { name="SLIMlaboratory", email="slim@di.unimi.it" },
]
description = "A python package for Learned Bloom Filters"
keywords = ["Bloom filters", "Learned Bloom filters", "machine learning"]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "bitarray",
  "mmh3==3.0.0",
  "numpy==1.22.4",
  "pybloom_live==4.0.0",
  "problexity==0.5.8",
  "scikit-learn==1.0.2",
]
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"
]

dynamic = ['version']

[project.urls]
Homepage = "https://github.com/SLIMlaboratory/learnedbf"
Documentation = "https://learnedbf.readthedocs.io/"
Issues = "https://github.com/SLIMlaboratory/learnedbf/issues"

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "learnedbf.__version__"}

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
