[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "learnedbf"
license =  "Apache-2.0"
authors = [
  { name="SLIMlaboratory", email="slim@di.unimi.it" },
]
description = "A python package for Learned Bloom Filters"
keywords = ["Bloom filters", "Learned Bloom filters", "machine learning"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [ 'mmh3>=5.2',
                 'numpy>=1.22',
                 'packaging>=26',
                 'problexity>=0.5.8',
                 'pybloom_live>=4',
                 'scikit-learn>=1.8' ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]

dynamic = ['version']

[project.urls]
Homepage = "https://github.com/SLIMlaboratory/learnedbf"
Documentation = "https://learnedbf.readthedocs.io/"
Issues = "https://github.com/SLIMlaboratory/learnedbf/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "learnedbf.__version__"}

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
